@@ -762,7 +762,7 @@ uccopy (zfile, zdest, fforcelocal)
 
 	  /* Copy a local file to a remote file.  We may have to
 	     copy the local file to the spool directory.  */
-	  imode = ixsysdep_file_mode (zfile);
+	  imode = ixsysdep_user_file_mode (zfile);
 	  if (imode == 0)
 	    ucabort ();
 
